fixed collapsing navbar

--- a/static/style.css
+++ b/static/style.css
@@ -90,7 +90,7 @@ div .houseListing{
 	display: inline-block;
 	padding: 0.2vw;
 	text-decoration: none;
-	font-size: 1.1vw;
+	/*font-size: 1.1vw;*/
 	/*font-size: 130%;*/
 }
 .navbar-logo{
